[package]
name = "parseal"
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/TheLazyDutchman/parseal/"
keywords = ["parsing"]
description = "An easy way to create your own parsers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parseal-derive = { path = "parseal-derive", version = "0.2.0", optional = true }
rand = "0.8.0"

[features]
derive = ["dep:parseal-derive"]

[[example]]
name = "html"
required-features = ["derive"]

[[example]]
name = "json"
required-features = ["derive"]

[[example]]
name = "yaml"
required-features = ["derive"]
