[package]
name = "parse-macro-derive"
version = "0.1.1"
edition = "2021"
description = "derive macro for the parseal crate"
repository = "https://github.com/TheLazyDutchman/ffs/"
license-file = "../LICENSE"

[lib]
proc-macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote="1.0.0"
syn="1.0.0"
