[package]
name = "parseal-derive"
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "derive macro for the parseal crate"
repository = "https://github.com/TheLazyDutchman/parseal/"
license-file = "../LICENSE"

[lib]
proc-macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote="1.0.0"
syn="1.0.0"
